# maticstudio-chat-agent

./: .gitignore  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  admin-dashboard.html  app.py  chatMATICStudio.html  database.py  flask_app.py  pyproject.toml  render.yaml  requirements.txt  start_chat.py  test_chat.py  website-integration.js
src/: __init__.py
src/agents/: __init__.py  email_agent.py  few_shot_agent.py  memory_agent.py  scheduling_agent.py  simple_agent.py
src/core/: __init__.py  prompts.py  tools.py
